--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "chokidar": "^2.0.3",
     "express": "^4.16.3",
     "form-data": "^2.3.2",
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.17.3",
+    "winston": "^3.0.0-rc5"
   },
   "devDependencies": {},
   "scripts": {
