--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chokidar": "^2.0.3",
     "express": "^4.16.3",
     "form-data": "^2.3.2",
+    "node-windows": "^0.1.14",
     "nodemon": "^1.17.3",
     "winston": "^3.0.0-rc5"
   },
